--- a/changelog.d/150.misc.rst
+++ b/changelog.d/150.misc.rst
@@ -1,4 +1,4 @@
-* Revamped the build system significantly.
+Revamped the build system significantly.
 
   - Now uses github actions instead of Travis
   - Now uses codecov.io instead of coveralls
